# 8051emu

./: CMakeLists.txt  run.sh
include/: emu8051.h
src/: emu8051.c  main.c  main.cpp
test/t0_nop/: 51.uvgui.lishutong  51.uvgui.lishutong.bak  51.uvgui.yixin  51.uvgui.小翠翠  51.uvopt  51.uvproj  t1_simple.a51
test/t10_cpl_rr_rl/: 51.uvgui.lishutong  51.uvopt  test.a51
test/t11_add_0/: 51.uvgui.lishutong  51.uvopt  test.a51
test/t11_add_1/: 51.uvgui.lishutong  51.uvopt  test.a51
test/t12_inc/: 51.uvgui.lishutong  51.uvopt  test.a51
test/t13_dec/: 51.uvgui.lishutong  51.uvopt  test.a51
test/t14_subb_0/: 51.uvgui.lishutong  51.uvgui.小翠翠  51.uvopt  test.a51
test/t14_subb_1/: 51.uvgui.lishutong  51.uvopt  test.a51
test/t15_mul_div_da/: 51.uvgui.lishutong  51.uvopt  test.a51
test/t16_jmp_call_ret/: 51.uvgui.lishutong  51.uvopt  test.a51
test/t17_djnz_jz_cjne/: 51.uvgui.lishutong  51.uvopt  test.a51
test/t18_bit_jb_jc/: 51.uvgui.lishutong  51.uvgui.yixin  51.uvgui.小翠翠  51.uvopt  51.uvproj  test.a51
test/t19_serial_0/: HELLO.C  HELLO.LST  Hello.uvgui.lishutong  Hello.uvgui.小翠翠  Hello.uvopt
test/t19_serial_1/: HELLO.C  HELLO.LST  HELLO.build_log.htm  Hello.uvgui.lishutong  Hello.uvopt  Hello.uvproj
test/t1_simple/: 51.uvgui.lishutong  51.uvgui.yixin  51.uvgui.小翠翠  51.uvopt  t1_simple.a51
test/t20_timer/: HELLO.C  HELLO.LST  Hello.uvgui  Hello.uvgui.lishutong  Hello.uvgui.小翠翠  Hello.uvopt
test/t21_int/: HELLO  HELLO.C  HELLO.LST  Hello.uvgui.lishutong  Hello.uvgui.yixin  Hello.uvgui.小翠翠  Hello.uvopt  Hello.uvproj  code.m51
test/t2_move_0/: 51.uvopt  (+3 more)
(+54 files in other folders)
